Добавляет базовую стилизацию: фоновое изображение, цвет фона, изображение логотипа

--- a/source/index.html
+++ b/source/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
 
-  <body class="page__body">
+  <body class="page-body">
     <header class="main-header">
       <div class="main-header__wrapper">
-        <a class="logo">Логотип</a>
+        <a class="main-header__logo">
+          <img src="img/logo.svg" alt="Логотип Барбершоп Бородинский">
+        </a>
         <nav class="sait-navigation">
           <ul class="site-navigation__list">
             <li class="site-navigation__item">
