Добавляет перелинковку между страницами

--- a/source/blank.html
+++ b/source/blank.html
@@ -21,10 +21,10 @@
                 <a class="site-navigation__link" href="#">Новости</a>
               </li>
               <li class="site-navigation__item">
-                <a class="site-navigation__link " href="#">Прайс-лист</a>
+                <a class="site-navigation__link" href="#">Прайс-лист</a>
               </li>
               <li class="site-navigation__item">
-                <a class="site-navigation__link" href="#">Магазин</a>
+                <a class="site-navigation__link" href="catalog.html">Магазин</a>
               </li>
               <li class="site-navigation__item">
                 <a class="site-navigation__link" href="#">Контакты</a>
