--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,24 +15,24 @@
         <nav class="page-header__navigation page-header__navigation--inner navigation">
             <ul class="navigation__list site-navigation">
               <li class="site-navigation__item">
-                <a class="site-navigation__link" href="#">Информация</a>
+                <a class="site-navigation__link" href="blank.html">Информация</a>
               </li>
               <li class="site-navigation__item">
-                <a class="site-navigation__link" href="#">Новости</a>
+                <a class="site-navigation__link" href="blank.html">Новости</a>
               </li>
               <li class="site-navigation__item">
-                <a class="site-navigation__link " href="#">Прайс-лист</a>
+                <a class="site-navigation__link " href="blank.html">Прайс-лист</a>
               </li>
               <li class="site-navigation__item">
-                <a class="site-navigation__link site-navigation__link--active" href="#">Магазин</a>
+                <a class="site-navigation__link site-navigation__link--active">Магазин</a>
               </li>
               <li class="site-navigation__item">
-                <a class="site-navigation__link" href="#">Контакты</a>
+                <a class="site-navigation__link" href="blank.html">Контакты</a>
               </li>
             </ul>
             <ul class="navigation__list user-navigation">
               <li class="user-navigation__item">
-                <a class="user-navigation__link" href="#">Вход</a>
+                <a class="user-navigation__link" href="blank.html">Вход</a>
               </li>
             </ul>
         </nav>
@@ -47,7 +47,7 @@
             <a class="breadcrumbs__link" href="index.html">Главная</a>
           </li>
           <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="blanc.html">Магазин</a>
+            <a class="breadcrumbs__link">Магазин</a>
           </li>
           <li class="breadcrumbs__item">
             <a class="breadcrumbs__link breadcrumbs__link--active">Средства для ухода</a>
@@ -217,7 +217,7 @@
             Барбершоп «Бородинский»<br />
             адрес: г. Санкт-Петербург, ул. б. Конюшенная, д. 19/8
           </p>
-          <a class="footer-contacts__map" href="#">Как нас найти?</a>
+          <a class="footer-contacts__map" href="blank.html">Как нас найти?</a>
           <a class="footer-contacts__phone" href="tel:+78126660266"
             >ТЕЛЕФОН: +7 (812) 666-02-66</a
           >
