--- a/source/blank.html
+++ b/source/blank.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Барбершоп Бородинский Статик</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
   <body class="page-body page-body--inner">
