--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Барбершоп Бородинский Статик</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
   </head>
 
   <body class="page-body page-body--inner">
@@ -114,7 +114,7 @@
             <a class="product__link" href="blank.html" aria-label="заказать набор для путешествий «Baxter of California»">
               <h3 class="product__title"><b class="product__title-description">Набор для путешествий</b>«Baxter of California»</h3>
               <picture>
-                <!-- <source type="image/webp" srcset="./img/baxter-kit.webp 1x, ./img/baxter-kit@2x.webp 2x"> -->
+                <source type="image/webp" srcset="./img/baxter-kit.webp 1x, ./img/baxter-kit@2x.webp 2x">
                 <img class="product__image" src="./img/baxter-kit.jpg" srcset="./img/baxter-kit@2x.jpg 2x" width="220" height="165" alt="Изображение товара набор для путешествий «Baxter of California»" />
               </picture>
             </a>
@@ -127,7 +127,7 @@
             <a class="product__link" href="blank.html" aria-label="заказать увлажняющий кондиционер «Baxter of California»">
               <h3 class="product__title"><b class="product__title-description">Увлажняющий кондиционер</b>«Baxter of California»</h3>
               <picture>
-                <!-- <source type="image/webp" srcset="./img/baxter-condition.webp 1x, ./img/baxter-condition@2x.webp 2x"> -->
+                <source type="image/webp" srcset="./img/baxter-condition.webp 1x, ./img/baxter-condition@2x.webp 2x">
                 <img class="product__image" src="./img/baxter-condition.jpg" srcset="./img/baxter-condition@2x.jpg 2x" width="220" height="165" alt="Изображение товара увлажняющий кондиционер «Baxter of California»" />
               </picture>
             </a>
@@ -140,7 +140,7 @@
             <a class="product__link" href="blank.html" aria-label="заказать гель для волос «SUAVECITO»">
               <h3 class="product__title"><b class="product__title-description">Гель для волос </b>«SUAVECITO»</h3>
               <picture>
-                <!-- <source type="image/webp" srcset="./img/gel-suavecito.webp 1x, ./img/gel-suavecito@2x.webp 2x"> -->
+                <source type="image/webp" srcset="./img/gel-suavecito.webp 1x, ./img/gel-suavecito@2x.webp 2x">
                 <img class="product__image" src="./img/gel-suavecito.jpg" srcset="./img/gel-suavecito@2x.jpg 2x" width="220" height="165" alt="Изображение товара гель для волос suavecito" />
               </picture>
             </a>
@@ -153,7 +153,7 @@
             <a class="product__link" href="blank.html" aria-label="заказать глина для укладки волос «American crew»">
               <h3 class="product__title"><b class="product__title-description">Глина для укладки волос </b>«American crew»</h3>
               <picture>
-                <!-- <source type="image/webp" srcset="./img/clay-crew.webp 1x, ./img/clay-crew@2x.webp 2x"> -->
+                <source type="image/webp" srcset="./img/clay-crew.webp 1x, ./img/clay-crew@2x.webp 2x">
                 <img class="product__image" src="./img/clay-crew.jpg" srcset="./img/clay-crew@2x.jpg 2x" width="220" height="165" alt="Изображение товара глина для укладки волос «American crew»" />
               </picture>
             </a>
@@ -166,7 +166,7 @@
             <a class="product__link" href="blank.html" aria-label="заказать гель для волос «American crew»">
               <h3 class="product__title"><b class="product__title-description">Гель для волос</b>«American crew»</h3>
               <picture>
-                <!-- <source type="image/webp" srcset="./img/gel-crew.webp 1x, ./img/gel-crew@2x.webp 2x"> -->
+                <source type="image/webp" srcset="./img/gel-crew.webp 1x, ./img/gel-crew@2x.webp 2x">
                 <img class="product__image" src="./img/gel-crew.jpg" srcset="./img/gel-crew@2x.jpg 2x" width="220" height="165" alt="Изображение товара гель для волос «American crew»" />
               </picture>
             </a>
@@ -179,7 +179,7 @@
             <a class="product__link" href="blank.html" aria-label="заказать набор для бритья «Baxter of California»">
               <h3 class="product__title"><b class="product__title-description">Набор для бритья </b>«Baxter of California»</h3>
               <picture>
-                <!-- <source type="image/webp" srcset="./img/baxter-shave-kit.webp 1x, ./img/baxter-shave-kit@2x.webp 2x"> -->
+                <source type="image/webp" srcset="./img/baxter-shave-kit.webp 1x, ./img/baxter-shave-kit@2x.webp 2x">
                 <img class="product__image" src="./img/baxter-shave-kit.jpg" srcset="./img/baxter-shave-kit@2x.jpg 2x" width="220" height="165" alt="Изображение товара набор для бритья «Baxter of California»" />
               </picture>
             </a>
